--- a/package.json
+++ b/package.json
@@ -28,10 +28,12 @@
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "axios": "^0.21.4",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-query": "^3.33.2",
     "react-router-dom": "^6.0.2"
   },
   "devDependencies": {
