--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "axios": "^0.21.4",
+    "dotenv": "^10.0.0",
     "mobx": "^6.3.7",
     "mobx-react": "^7.2.1",
     "react": "^17.0.2",
