--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "mobx": "^6.3.7",
-    "mobx-react": "^7.2.1",
+    "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
