--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
+    "@mui/styles": "^5.2.2",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "mobx": "^6.3.7",
