--- a/package.json
+++ b/package.json
@@ -29,11 +29,14 @@
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styles": "^5.2.2",
+    "apollo-boost": "^0.4.9",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
+    "graphql": "^16.2.0",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
+    "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
     "react-router-dom": "^6.0.2"
