--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
   },
   "homepage": "https://github.com/kis0421/study-diary#readme",
   "dependencies": {
+    "@apollo/client": "^3.5.7",
     "@emotion/react": "^11.6.0",
     "@emotion/styled": "^11.6.0",
     "@mui/core": "^5.0.0-alpha.54",
     "@mui/icons-material": "^5.1.1",
     "@mui/material": "^5.1.1",
     "@mui/styles": "^5.2.2",
-    "apollo-boost": "^0.4.9",
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "graphql": "^16.2.0",
