--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "build": "webpack --mode=production --node-env=production",
     "build:dev": "webpack --mode=development",
     "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch",
-    "serve": "webpack serve"
+    "watch": "webpack --watch"
   },
   "repository": {
     "type": "git",
@@ -39,7 +38,8 @@
     "react-apollo": "^3.1.5",
     "react-dom": "^17.0.2",
     "react-query": "^3.33.2",
-    "react-router-dom": "^6.2.2"
+    "react-router-dom": "^6.2.2",
+    "react-swipeable": "^6.2.0"
   },
   "devDependencies": {
     "@types/react": "^17.0.34",
