--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "version": "1.0.0",
   "description": "study-diary",
   "main": "index.js",
+  "homepage": "https://kis0421.github.io/study-diary/",
   "scripts": {
     "test": "test",
-    "dev": "webpack serve",
-    "build": "webpack --mode=production --node-env=production",
+    "dev": "webpack-dev-server --mode development",
+    "build": "webpack --mode production",
     "build:dev": "webpack --mode=development",
-    "build:prod": "webpack --mode=production --node-env=production",
-    "watch": "webpack --watch"
+    "build:prod": "webpack --mode production",
+    "watch": "webpack --watch",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -20,7 +22,6 @@
   "bugs": {
     "url": "https://github.com/kis0421/study-diary/issues"
   },
-  "homepage": "https://github.com/kis0421/study-diary#readme",
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@emotion/react": "^11.6.0",
@@ -47,6 +48,7 @@
     "@webpack-cli/generators": "^2.4.1",
     "autoprefixer": "^10.4.0",
     "css-loader": "^6.5.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.4.4",
     "postcss": "^8.3.11",
