--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "axios": "^0.21.4",
     "dotenv": "^10.0.0",
     "graphql": "^16.2.0",
+    "lodash": "^4.17.21",
     "mobx": "^6.3.7",
     "mobx-react-lite": "^3.2.2",
     "react": "^17.0.2",
