--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-swipeable": "^6.2.0"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.180",
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "@webpack-cli/generators": "^2.4.1",
